# vipra-1.0

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  Base_2randomization_2random_8hpp_source.html  BehaviorBaseVisitor_8h_source.html  BehaviorLexer_8h_source.html  BehaviorParser_8h_source.html  BehaviorVisitor_8h_source.html  Behaviors_2include_2random_2random_8hpp_source.html  Dockerfile  Doxyfile  KEY-example.html  Makefile  README.md  Vagrantfile  action_8hpp_source.html  annotated.html  atom_8hpp_source.html  atom__be_8hpp_source.html  atom__change__speed_8hpp_source.html  atom__stop_8hpp_source.html  behavior__builder_8hpp_source.html  behavior__context_8hpp_source.html  behavior__error__listener_8hpp_source.html  bool__latch_8hpp_source.html  calm__collision_8hpp_source.html  calm__goals_8hpp_source.html  calm__line_8hpp_source.html  calm__pedestrian__model_8hpp_source.html  calm__pedestrian__set_8hpp_source.html  calm__rect_8hpp_source.html  caseless__str__comp_8hpp_source.html  classBHVR_1_1Action-members.html  classBHVR_1_1Action.html  classBHVR_1_1BehaviorBuilder-members.html  classBHVR_1_1BehaviorBuilder.html  classBHVR_1_1BehaviorBuilder__coll__graph.map  classBHVR_1_1BehaviorBuilder__coll__graph.md5  classBHVR_1_1BehaviorBuilder__inherit__graph.map  (+1096 more)
Autoconf_files/: Dockerfile  Makefile.am  README  compile  configure.ac
VIPRA/: .Makefile.swp  .gitignore  .pedestrian_set.cpp.swp  Behaviors.g4  CMakeCache.txt  CMakeLists.txt  Makefile  app.js  calm_entity_set_factory.cpp  calm_entity_set_factory.hpp  calm_pedestrian_model.cpp  calm_pedestrian_model.hpp  cmake_install.cmake  code_generator.cpp  compile.sh  compile_commands.json  coordfile.xml  coordinates.json  coordinates.xml  data.cpp  data.hpp  data_set_factory.cpp  data_set_factory.hpp  dimensions.hpp  dsl_sample.txt  entity_set_factory.cpp  entity_set_factory.hpp  export_pedestrian_data.xml  generated_main  generated_main.cpp  generated_main.exe.stackdump  goal.hpp  human_behaviors.md  important_announcement.behavior  index.js  input_data_loader.hpp  main  main.cpp  main.exe.stackdump  main.hpp  (+43 more)
VIPRA/Base/: CMakeLists.txt  Makefile  cmake_install.cmake
VIPRA/Base/_pch/: pch.hpp
VIPRA/Base/arguments/: arguments.hpp
VIPRA/Base/behaviorModel/: Makefile
VIPRA/Base/clock/: CMakeLists.txt  Makefile  clock.cpp  clock.hpp  cmake_install.cmake
VIPRA/Base/code_generation/: CMakeLists.txt  base.cpp  code_generator.cpp
VIPRA/Base/configuration/: CMakeLists.txt  Makefile  cmake_install.cmake  (+4 more)
VIPRA/__tests__/: CMakeLists.txt  Makefile  README.md  Testing.cpp  ex.json  paths.json  sources
VIPRA/behaviors/: Makefile  cmake_install.cmake
VIPRA/code_generation/: code_generator.cpp  code_generator_webAPI.cpp  code_generator_webAPI.cpp.save
VIPRA/configuration/: configuration_reader.cpp  configuration_reader.hpp
VIPRA/controllers/: main.js
VIPRA/data_sets/: a320_144_pedestrians.xml
VIPRA/definitions/: movement_definitions.hpp  type_definitions.hpp
VIPRA/dsl/: dsl_human_behavior.cpp  dsl_human_behavior.hpp  human_behavior.cpp  human_behavior.hpp  simulation_context.hpp
VIPRA/entity_sets/: airplane_obstacle_set.cpp  airplane_obstacle_set.hpp  calm_entity_set_factory.cpp  calm_entity_set_factory.hpp  calm_pedestrian_set.cpp  calm_pedestrian_set.hpp  entity_set_factory.hpp  obstacle_set.cpp  obstacle_set.hpp  pedestrian_set.cpp  pedestrian_set.hpp
VIPRA/goals/: calm_goal.cpp  calm_goal.hpp  calm_goals.cpp  calm_goals.hpp  goal.cpp  goal.hpp  goals.hpp
VIPRA/input_data/: Dockerfile  TEST_entity_set.json  a320_144_obstacles.json  a320_144_obstacles.xml  a320_144_pedestrians.xml  coord_A320_144.d_coordinates.txt  includes_map.json  input_files.json  sim_config.json  sim_options.json  sim_options_webAPI.json  simulation_params.xml
VIPRA/models/: calm_pedestrian_model.cpp  calm_pedestrian_model.hpp  dsl_human_behavior.cpp  dsl_human_behavior.hpp  human_behavior.cpp  human_behavior.hpp  human_behavior_model.cpp  human_behavior_model.hpp  pedestrian_dynamics_model.hpp  random_sleep_behavior.cpp  random_sleep_behavior.hpp
VIPRA/modules/: Makefile  cmake_install.cmake
VIPRA/obstacle_maps/: CRJ_200_50_obstacles.json
VIPRA/output/: r1w0_params.json  r1w1_params.json  r1w2_params.json
VIPRA/output_data/: pedestrian_animfile.xml  pedestrian_trajectory.json  pedestrian_trajectory.xml
VIPRA/params/: r1w0
VIPRA/pedestian_maps/: 757_200_182_pedestrians.json  B757_200_201_pedestrians.json  CRJ_200_50_pedestrians.json
VIPRA/readers/: input_data_loader.hpp  input_json_reader.cpp  input_json_reader.hpp  input_xml_reader.cpp  input_xml_reader.hpp  xml_reader.cpp  xml_reader.hpp
VIPRA/sims/: Makefile
VIPRA/simulation/: clock.cpp  clock.hpp  data.cpp  data.hpp  simulation.cpp  simulation.hpp
VIPRA/webAPI/: File_Paths.js  Makefile  README.md  app.js  compileSim  config.js  package-lock.json  package.json  run  startSim
VIPRA/writers/: json_timestep_writer.cpp  json_timestep_writer.hpp  json_writer.cpp  json_writer.hpp  json_writer_tester.cpp  output_criterion_checker.hpp  output_data_writer.hpp  output_timestep_checker.cpp  output_timestep_checker.hpp  simulation_output_handler.hpp  timestep_console_logger.cpp  timestep_console_logger.hpp  timestep_output_handler.cpp  timestep_output_handler.hpp  xml_writer.cpp  xml_writer.hpp
VIPRA_Behaviors/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  README_dev.md
VIPRA_Behaviors/__tests__/: .clang-tidy  CMakeLists.txt  Testing.cpp  makefile
VIPRA_Behaviors/dsl/: CMakeLists.txt  Makefile  behavior_builder.cpp  behavior_builder.hpp  dsl_human_behavior.cpp  dsl_human_behavior.hpp  human_behavior.cpp  human_behavior.hpp
VIPRA_Behaviors/grammar/: Behavior.g4  CMakeLists.txt  Makefile  action.g4  attributes.g4  common.g4  condition.g4  declarations.g4  definitions.g4  directions.g4  event.g4  goals.g4  lexer_rules.g4  location.g4  objects.g4  selector.g4  state.g4  stimuli.g4  targets.g4  time.g4  transitions.g4  values.g4
VIPRA_Behaviors/performance/: CMakeLists.txt  perf_testing.cpp  perf_testing.hpp
VIPRA_Behaviors/src/: CMakeLists.txt
(+2399 files in other folders)
